--- a/src/app/sections/contact-component/contact-component.html
+++ b/src/app/sections/contact-component/contact-component.html
@@ -1,4 +1,6 @@
 <section class="content">
-  <div><app-contact-main></app-contact-main> <app-contact-form></app-contact-form></div>
+  <div class="inner-container">
+    <app-contact-main></app-contact-main> <app-contact-form></app-contact-form>
+  </div>
   <app-footer></app-footer>
 </section>
