--- a/src/app/sections/contact-component/contact-form/contact-form.html
+++ b/src/app/sections/contact-component/contact-form/contact-form.html
@@ -27,5 +27,7 @@
       of my data as outlined.
     </label>
   </div>
-  <button class="send-button">send</button>
+  <div class="button-container">
+    <button class="send-button">send</button>
+  </div>
 </div>
