--- a/src/app/sections/contact-component/footer/footer.html
+++ b/src/app/sections/contact-component/footer/footer.html
@@ -1,1 +1,21 @@
-<p>footer works!</p>
+<nav>
+  <div class="content">
+    <div class="animation-container">
+      <p>Legal Notice</p>
+    </div>
+    <button class="btn">
+      <span class="btn-text">GitHub</span>
+      <img src="/img/icons/gitHubIcon.png" class="btn-icon" alt="Icon" />
+    </button>
+
+    <button class="btn">
+      <span class="btn-text">LinkedIn</span>
+      <img src="/img/icons/linkedInIcon.png" class="btn-icon" alt="Icon" />
+    </button>
+
+    <button class="btn">
+      <span class="btn-text">Email</span>
+      <img src="/img/icons/mailIcon.png" class="btn-icon" alt="Icon" />
+    </button>
+  </div>
+</nav>
