changed folder structure

--- a/src/app/sections/hero/hero.html
+++ b/src/app/sections/hero/hero.html
@@ -1,6 +1,5 @@
 <section class="hero">
-  <app-hero-header></app-hero-header>
-
-  <app-hero-content></app-hero-content>
-  <app-hero-socials></app-hero-socials>
+  <app-header></app-header>
+  <app-hero-main></app-hero-main>
+  <app-socials></app-socials>
 </section>
