--- a/src/app/sections/hero/hero.scss
+++ b/src/app/sections/hero/hero.scss
@@ -1,19 +1,45 @@
 :host {
+  display: block;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .hero {
   height: 100vh;
-  background-image: url('/img/background/01_Hero1.png');
-  max-width: 1920px;
   width: 100%;
-  background-size: contain;
-  background-position: top;
+  max-width: 1920px;
+  margin: 0 auto;
+  background-image: url('/img/background/01_Hero1.png');
+  background-size: cover;
+  background-position: bottom center;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+app-header {
+  position: absolute;
+  top: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+app-hero-main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+app-socials {
+  position: absolute;
+  bottom: 120px;
+  left: 40px;
+  display: flex;
   flex-direction: column;
 }
