minor styling changes

--- a/src/app/sections/skill-set/skill-title/skill-title.scss
+++ b/src/app/sections/skill-set/skill-title/skill-title.scss
@@ -30,7 +30,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
+  box-sizing: border-box;
 }
 
 h2 {
@@ -46,5 +48,5 @@ h3 {
 .title-container {
   width: 100%;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
