--- a/src/app/sections/skill-set/skill-set.scss
+++ b/src/app/sections/skill-set/skill-set.scss
@@ -21,8 +21,9 @@
   width: 100%;
   height: 600px;
   max-width: 1920px;
+  width: clamp(600px, 90%, 1600px);
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding: 0 80px;
   margin-bottom: 60px;
 }
@@ -40,7 +41,6 @@
 }
 
 .col-center {
-  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
