--- a/src/app/sections/projects-component/project-card/project-card.scss
+++ b/src/app/sections/projects-component/project-card/project-card.scss
@@ -86,3 +86,15 @@ p {
     background-color: #f87a55;
   }
 }
+
+@media (max-width: 1680px) {
+  .card-wrapper {
+    width: 450px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .card-wrapper {
+    width: 400px;
+  }
+}
