--- a/src/app/sections/hero/hero-main/hero-polaroid/hero-polaroid.scss
+++ b/src/app/sections/hero/hero-main/hero-polaroid/hero-polaroid.scss
@@ -54,3 +54,9 @@
   display: inline-block;
   margin-left: -25px;
 }
+
+@media (max-width: 900px) {
+  .polaroid-wrapper {
+    width: 150px;
+  }
+}
