--- a/src/app/sections/hero/socials/socials.scss
+++ b/src/app/sections/hero/socials/socials.scss
@@ -1,13 +1,12 @@
 .content {
   display: flex;
   flex-direction: column;
-  height: 200px;
-  padding-left: 20px;
-  padding-right: 20px;
-  width: 100%;
+  min-height: 200px;
+  height: auto;
+  padding: 40px 20px;
   max-width: 1920px;
-  padding-top: 40px;
   gap: 8px;
+  width: fit-content;
 }
 
 img {
