--- a/src/app/sections/peer-reviews/review-cards/review-cards.scss
+++ b/src/app/sections/peer-reviews/review-cards/review-cards.scss
@@ -140,3 +140,36 @@
     width: 400px;
   }
 }
+
+@media (max-width: 1000px) {
+  .sticker-container {
+    flex-direction: column;
+  }
+
+  .sticker-wrapper {
+    width: 80%;
+    max-width: 500px;
+    margin: -60px 0 0 0;
+
+    &:first-child {
+      margin-top: 0;
+    }
+
+    &:nth-child(1) {
+      transform: rotate(-4deg);
+      z-index: 3;
+    }
+    &:nth-child(2) {
+      transform: rotate(2deg);
+      z-index: 2;
+    }
+    &:nth-child(3) {
+      transform: rotate(-2deg);
+      z-index: 1;
+    }
+
+    &:hover {
+      z-index: 10;
+    }
+  }
+}
