--- a/src/app/sections/projects-component/project-card/project-card.scss
+++ b/src/app/sections/projects-component/project-card/project-card.scss
@@ -9,14 +9,17 @@ p {
 }
 
 .card-wrapper {
-  width: 500px;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
 
 .preview-container {
   width: 100%;
-  height: 350px;
+  height: auto;
+  aspect-ratio: 1.42;
   border-radius: 25px;
   overflow: hidden;
   position: relative;
@@ -84,17 +87,5 @@ p {
 
   &:hover {
     background-color: #f87a55;
-  }
-}
-
-@media (max-width: 1680px) {
-  .card-wrapper {
-    width: 450px;
-  }
-}
-
-@media (max-width: 1200px) {
-  .card-wrapper {
-    width: 400px;
   }
 }
