--- a/src/app/sections/about-me-section/about-me-information/about-me-information.html
+++ b/src/app/sections/about-me-section/about-me-information/about-me-information.html
@@ -8,7 +8,8 @@
     creative design. I draw my drive from the complex magic systems in the fantasy novels I read.
     Just like a great story, a great interface needs internal consistency and a touch of wonder. I’m
     constantly learning new "spells" in my tech stack to ensure every user journey feels effortless
-    and enchanting. When the screen goes dark, you’ll find me with a cup of tea and a fantasy epic
-    in hand—always curious, always dreaming up the next build. </span
+    and enchanting.<br />
+    When the screen goes dark, you’ll find me with a cup of tea and a fantasy epic in hand—always
+    curious, always dreaming up the next build. </span
   ><br /><span>Let's collaborate and build something remarkable together!</span>
 </div>
