--- a/src/app/sections/hero/socials/socials.scss
+++ b/src/app/sections/hero/socials/socials.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   min-height: 200px;
   height: auto;
-  padding: 40px 20px;
+  padding: 40px 0;
   max-width: 1920px;
   gap: 8px;
   width: fit-content;
