--- a/src/app/sections/contact-component/contact-component.scss
+++ b/src/app/sections/contact-component/contact-component.scss
@@ -45,3 +45,17 @@ app-footer {
   width: 100%;
   margin-top: auto;
 }
+
+@media (max-width: 800px) {
+  .content {
+    height: 100vh;
+  }
+
+  .inner-container {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    height: 1000px;
+    align-items: flex-start;
+  }
+}
