--- a/src/app/sections/contact-component/contact-main/contact-main.scss
+++ b/src/app/sections/contact-component/contact-main/contact-main.scss
@@ -39,3 +39,13 @@ h3 {
   display: flex;
   justify-content: end;
 }
+
+@media (max-width: 800px) {
+  .content {
+    width: 700px;
+  }
+
+  .line-container {
+    justify-content: start;
+  }
+}
