--- a/src/app/sections/contact-component/contact-form/contact-form.scss
+++ b/src/app/sections/contact-component/contact-form/contact-form.scss
@@ -62,7 +62,7 @@ textarea {
 
 label {
   display: block;
-  font-size: 24px;
+  font-size: clamp(18px, 1.25vw, 24px);
   color: #f8f9fa;
   padding-left: 20px;
 }
@@ -119,8 +119,9 @@ label {
 .agreement-checkbox input[type='checkbox']:checked::after {
   opacity: 1;
 }
+
 .policy-text {
-  font-size: 18px;
+  font-size: clamp(14px, 0.94vw, 18px);
 }
 
 .highlight-text {
@@ -165,22 +166,12 @@ label {
 
 @media (max-width: 800px) {
   .content {
-    width: 700px;
-    padding-left: 40px;
-    margin-top: -230px;
+    width: 100%;
+    padding-bottom: 50px;
   }
 
-  .contact-form {
-    width: 700px;
-    margin-left: 310px;
-  }
-
+  .contact-form,
   .agreement-checkbox {
-    width: 700px;
-    margin-left: 310px;
-  }
-
-  .button-container {
-    margin-left: 380px;
+    width: 100%;
   }
 }
