--- a/src/app/sections/projects-component/projects-main/projects-main.scss
+++ b/src/app/sections/projects-component/projects-main/projects-main.scss
@@ -3,11 +3,11 @@
 }
 
 h2 {
-  font-size: 64px;
+  font-size: clamp(32px, 3.33vw, 64px);
 }
 
 h3 {
-  font-size: 24px;
+  font-size: clamp(20px, 1.25vw, 24px);
 }
 
 .animation-container {
