--- a/src/app/sections/about-me-section/location-snippets/location-snippets.scss
+++ b/src/app/sections/about-me-section/location-snippets/location-snippets.scss
@@ -51,3 +51,35 @@
     }
   }
 }
+
+@media (max-width: 550px) {
+  .content {
+    .paper-wrapper {
+      width: 90vw;
+
+      .overlay {
+        gap: 12px;
+        padding: 0 15px;
+
+        .overlay-icon {
+          width: 30px;
+        }
+
+        .overlay-text {
+          font-size: 18px;
+        }
+      }
+
+      &:first-child {
+        margin-top: 0;
+      }
+
+      &:nth-child(1) {
+        transform: rotate(-2deg);
+      }
+      &:nth-child(3) {
+        transform: rotate(2deg) translateY(0);
+      }
+    }
+  }
+}
