--- a/src/app/sections/skill-set/skill-set.scss
+++ b/src/app/sections/skill-set/skill-set.scss
@@ -7,7 +7,8 @@
 .content {
   width: 100%;
   max-width: 1920px;
-  height: 1200px;
+  min-height: 1000px;
+  height: auto;
   background-image: url('/img/background/03_Skills1.png');
   background-size: cover;
   background-position: top;
@@ -18,7 +19,7 @@
 
 .main-layout {
   display: flex;
-  width: 100%;
+  width: 90%;
   height: 600px;
   max-width: 1920px;
   width: clamp(600px, 90%, 1600px);
@@ -60,11 +61,13 @@
 
   .col-right {
     margin-top: 70px;
-    margin-left: 500px;
+    margin-left: 0px;
+    align-self: flex-end;
   }
 
   .inner-layout {
     flex-direction: column;
+    gap: 40px;
   }
 }
 
@@ -75,6 +78,23 @@
   }
 
   .inner-layout {
-    gap: 30px;
+    gap: 0px;
+  }
+
+  .main-layout {
+    width: 95%;
+    padding: 0 15px;
+  }
+
+  .col-right {
+    margin-top: 30px;
+    align-self: center;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 500px) {
+  .col-left {
+    padding-top: 50px;
   }
 }
