hero header media queries

--- a/src/app/sections/hero/header/header.html
+++ b/src/app/sections/hero/header/header.html
@@ -1,4 +1,11 @@
 <div class="content">
-  <app-personal-logo></app-personal-logo> <app-navbar class="nav-header"></app-navbar>
+  <app-personal-logo></app-personal-logo>
+
+  <app-navbar class="nav-header"></app-navbar>
   <app-lg-switch></app-lg-switch>
+
+  <div class="mobile-burger">
+    <div class="line"></div>
+    <div class="line"></div>
+  </div>
 </div>
