--- a/src/app/sections/hero/hero-main/hero-polaroid/hero-polaroid.scss
+++ b/src/app/sections/hero/hero-main/hero-polaroid/hero-polaroid.scss
@@ -1,22 +1,31 @@
+.polaroid-wrapper {
+  position: relative;
+  display: block;
+  width: 200px;
+  transform: rotate(8deg);
+  display: inline-block;
+}
+
+.frame {
+  width: 100%;
+  position: relative;
+  z-index: 2;
+  display: block;
+}
+
 .photo {
   position: absolute;
-  top: 10px;
-  left: 15px;
-  width: 170px;
-  height: 230px;
+  top: 5.5%;
+  left: 7%;
+  width: 86%;
+  height: 80%;
   object-fit: cover;
   z-index: 1;
   filter: grayscale(100%);
-  transition: filter 0.3s ease;
 }
 
 .polaroid-wrapper:hover .photo {
   filter: grayscale(0%);
-}
-.polaroid-wrapper {
-  position: relative;
-  width: 300px;
-  transform: rotate(8deg);
 }
 
 .frame {
@@ -30,12 +39,13 @@
 .name-tag {
   position: absolute;
   color: black;
-  bottom: 3px;
-  left: 40px;
+  bottom: 2%;
+  left: 20%;
   z-index: 3;
-  font-size: 30px;
+  font-size: clamp(12px, 5vw, 30px);
   font-weight: bold;
   font-family: 'Kalam';
+  white-space: nowrap;
 }
 
 .smiley {
@@ -56,22 +66,35 @@
 }
 
 @media (max-width: 900px) {
-  .polaroid-wrapper {
-    width: 150px;
-  }
-
+  .polaroid-wrapper,
   .frame {
     width: 150px;
   }
 
+  .name-tag {
+    left: 30%;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 720px) {
+  .polaroid-wrapper,
+  .frame {
+    width: clamp(180px, 65vw, 280px);
+  }
+
   .photo {
-    top: 10px;
-    left: 9px;
-    width: 130px;
-    height: 170px;
+    top: 5.5%;
+    left: 7.5%;
+    width: 85%;
+    height: 78%;
+    position: absolute;
   }
 
   .name-tag {
-    font-size: 20px;
+    bottom: 6%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: clamp(18px, 5vw, 26px);
   }
 }
