--- a/src/app/sections/hero/hero-main/title/title.scss
+++ b/src/app/sections/hero/hero-main/title/title.scss
@@ -1,14 +1,19 @@
 .content {
+  display: flex;
+  flex-wrap: nowrap;
   letter-spacing: 1px;
-  font-size: 120px;
+  font-size: clamp(40px, 10vw, 120px);
+  width: 100%;
+  max-width: max-content;
   padding-top: 30px;
-  width: 555px;
 }
 
 .content span {
+  font-size: clamp(40px, 10vw, 120px);
   display: inline-block;
   transition: all 0.2s ease;
   cursor: default;
+  flex-shrink: 0;
 }
 
 .content span:hover {
@@ -23,9 +28,9 @@
   text-transform: lowercase;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 720px) {
   .content {
-    font-size: 100px;
-    width: 450px;
+    padding-top: 10px;
+    margin-left: -5px;
   }
 }
