--- a/src/app/sections/peer-reviews/review-cards/review-cards.scss
+++ b/src/app/sections/peer-reviews/review-cards/review-cards.scss
@@ -147,6 +147,7 @@
 @media (max-width: 1000px) {
   .sticker-container {
     flex-direction: column;
+    padding-top: 30px;
   }
 
   .sticker-wrapper {
