--- a/src/app/sections/peer-reviews/peer-reviews.scss
+++ b/src/app/sections/peer-reviews/peer-reviews.scss
@@ -15,3 +15,10 @@
   padding-left: 40px;
   padding-right: 40px;
 }
+
+@media (max-width: 720px) {
+  .content {
+    padding-bottom: 70px;
+    padding-top: 0;
+  }
+}
