--- a/src/app/sections/skill-set/skill-set.scss
+++ b/src/app/sections/skill-set/skill-set.scss
@@ -7,7 +7,7 @@
 .content {
   width: 100%;
   max-width: 1920px;
-  min-height: 1000px;
+  min-height: 100vh;
   height: auto;
   background-image: url('/img/background/03_Skills1.png');
   background-size: cover;
@@ -15,13 +15,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 80px 0;
 }
 
 .main-layout {
   display: flex;
   width: 90%;
-  height: 600px;
-  max-width: 1920px;
+  height: auto;
+  max-width: 1600px;
   width: clamp(600px, 90%, 1600px);
   align-items: center;
   justify-content: center;
@@ -60,7 +61,7 @@
   }
 
   .col-right {
-    margin-top: 70px;
+    margin-top: 20px;
     margin-left: 0px;
     align-self: flex-end;
   }
@@ -72,11 +73,6 @@
 }
 
 @media (max-width: 800px) {
-  .col-right {
-    margin-left: 200px;
-    margin-top: 20px;
-  }
-
   .inner-layout {
     gap: 0px;
   }
@@ -90,11 +86,5 @@
     margin-top: 30px;
     align-self: center;
     margin-left: 0;
-  }
-}
-
-@media (max-width: 500px) {
-  .col-left {
-    padding-top: 50px;
   }
 }
