media query changes

--- a/src/app/sections/about-me-section/about-me-cta/about-me-cta.scss
+++ b/src/app/sections/about-me-section/about-me-cta/about-me-cta.scss
@@ -1,10 +1,10 @@
 .content {
-  border: 2px solid black;
+  border: 2px solid #0e1013;
   background-color: transparent;
   border-radius: 25px;
   padding: 10px;
   width: 150px;
-  box-shadow: 3px 3px 0 black;
+  box-shadow: 3px 3px 0 #0e1013;
   cursor: pointer;
 
   transition:
