--- a/src/app/sections/hero/hero-main/hero-main.scss
+++ b/src/app/sections/hero/hero-main/hero-main.scss
@@ -75,6 +75,7 @@
     flex-direction: column;
     align-items: flex-start;
     text-align: left;
+    padding-top: 20px;
   }
 
   .inner-container-with-profile {
