--- a/src/app/sections/projects-component/project-card/project-card.scss
+++ b/src/app/sections/projects-component/project-card/project-card.scss
@@ -89,3 +89,65 @@ p {
     background-color: #f87a55;
   }
 }
+
+@media (max-width: 720px) {
+  .card-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .preview-container {
+    display: contents;
+
+    &::after {
+      display: none;
+      content: none;
+    }
+
+    &:hover .preview-image {
+      transform: scale(1);
+    }
+  }
+
+  .preview-image {
+    order: 1;
+    width: 100%;
+    max-width: 450px;
+    margin: 0 auto;
+    height: auto;
+    aspect-ratio: 1.42;
+    border-radius: 25px;
+    overflow: hidden;
+    display: block;
+
+    transform: scale(1);
+    transition: none;
+  }
+
+  h3 {
+    order: 2;
+  }
+  p {
+    order: 3;
+  }
+
+  .preview-button {
+    order: 4;
+    position: static;
+    opacity: 1;
+    width: 150px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: 0;
+    color: #0e1013;
+    border: 2px solid #0e1013;
+    box-shadow: 3px 3px 0 #0e1013;
+    transition: all 0.1s ease;
+
+    &:active {
+      transform: translate(3px, 3px);
+      box-shadow: 0px 0px 0 #0e1013;
+      background-color: #f87a55;
+    }
+  }
+}
