--- a/src/app/sections/skill-set/pull-badge/pull-badge.html
+++ b/src/app/sections/skill-set/pull-badge/pull-badge.html
@@ -12,6 +12,6 @@
     <img src="/img/03_Stickers/Arrow.png" class="sticker-arrow" alt="" />
 
     <span class="finish-text">I'm currently looking into:</span>
-    <img src="" class="finish-img" alt="" />
+    <img src="/img/additionals/Capa_8.png" class="finish-img" alt="" />
   </label>
 </div>
