--- a/src/app/sections/about-me-section/about-me-information/about-me-information.scss
+++ b/src/app/sections/about-me-section/about-me-information/about-me-information.scss
@@ -49,3 +49,25 @@ img {
     width: 60%;
   }
 }
+
+@keyframes drawLine {
+  0% {
+    clip-path: inset(0 100% 0 0);
+  }
+  50% {
+    clip-path: inset(0 0 0 0);
+  }
+  100% {
+    clip-path: inset(0 0 0 100%);
+  }
+}
+
+@media (max-width: 720px) {
+  .animation-container:hover::before {
+    clip-path: inset(0 100% 0 0);
+  }
+
+  .animation-container::before {
+    animation: drawLine 5s ease-in-out infinite;
+  }
+}
