router links added to nav bar and ctas

--- a/src/app/sections/about-me-section/about-me-section.html
+++ b/src/app/sections/about-me-section/about-me-section.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div id="about-me" class="content">
   <app-location-snippets></app-location-snippets>
   <div class="inner-content">
     <app-about-me-information></app-about-me-information>
