--- a/src/app/sections/hero/header/navbar/nav-contact/nav-contact.html
+++ b/src/app/sections/hero/header/navbar/nav-contact/nav-contact.html
@@ -1,1 +1,3 @@
-<div class="animation-container"><p class="content">Contact</p></div>
+<div [routerLink]="['/']" fragment="contact-me" class="animation-container">
+  <p class="content">Contact</p>
+</div>
