--- a/src/app/sections/hero/hero-main/cta/cta.html
+++ b/src/app/sections/hero/hero-main/cta/cta.html
@@ -1,1 +1,1 @@
-<button class="content">Get in Touch</button>
+<button [routerLink]="['/']" fragment="contact-me" class="content">Get in Touch</button>
