--- a/src/app/sections/skill-set/skill-set.html
+++ b/src/app/sections/skill-set/skill-set.html
@@ -1,4 +1,4 @@
-<section class="content">
+<section id="mySkills" class="content">
   <div class="main-layout">
     <div class="inner-layout">
       <div class="col-left">
