--- a/src/app/sections/contact-component/contact-component.html
+++ b/src/app/sections/contact-component/contact-component.html
@@ -1,4 +1,4 @@
-<section class="content">
+<section id="contact-me" class="content">
   <div class="inner-container">
     <app-contact-main></app-contact-main> <app-contact-form></app-contact-form>
   </div>
