--- a/src/app/sections/hero/header/navbar/nav-about/nav-about.html
+++ b/src/app/sections/hero/header/navbar/nav-about/nav-about.html
@@ -1,3 +1,3 @@
 <div class="animation-container">
-  <p class="content">About me</p>
+  <p [routerLink]="['/']" fragment="about-me" class="content">About me</p>
 </div>
