--- a/src/app/sections/hero/header/navbar/nav-projects/nav-projects.html
+++ b/src/app/sections/hero/header/navbar/nav-projects/nav-projects.html
@@ -1,1 +1,3 @@
-<div class="animation-container"><p class="content">Projects</p></div>
+<div [routerLink]="['/']" fragment="myProjects" class="animation-container">
+  <p class="content">Projects</p>
+</div>
