--- a/src/app/sections/hero/header/navbar/nav-skills/nav-skills.html
+++ b/src/app/sections/hero/header/navbar/nav-skills/nav-skills.html
@@ -1,1 +1,3 @@
-<div class="animation-container"><p class="content">Skills</p></div>
+<div [routerLink]="['/']" fragment="mySkills" class="animation-container">
+  <p class="content">Skills</p>
+</div>
