--- a/src/app/sections/projects-component/projects-component.html
+++ b/src/app/sections/projects-component/projects-component.html
@@ -1,3 +1,3 @@
-<section class="content">
+<section id="myProjects" class="content">
   <app-projects-main></app-projects-main><app-project-examples></app-project-examples>
 </section>
