github links added

--- a/src/app/sections/contact-component/footer/footer.html
+++ b/src/app/sections/contact-component/footer/footer.html
@@ -3,7 +3,7 @@
     <div class="animation-container">
       <p>Legal Notice</p>
     </div>
-    <button class="btn">
+    <button (click)="openGithub()" class="btn">
       <span class="btn-text">GitHub</span>
       <img src="/img/icons/gitHubIcon.png" class="btn-icon" alt="Icon" />
     </button>
